recortamos el texto para mejor calidad

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                 <div>
                     <h1>Calidad 100% Natural</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro ratione a rerum nam! Optio illo veritatis consequatur consectetur laborum, cumque nihil perspiciatis harum mollitia, dicta aut expedita quibusdam voluptatibus iste. Unde,
-                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam distinctio aliquid! Qui, enim repellendus. Corrupti expedita minima ipsam beatae distinctio vitae perspiciatis maiores.
-                        Ipsam aliquam blanditiis quaerat reiciendis cum explicabo dolor quos beatae hic voluptatum. Aliquid, iure alias? Dolorem, mollitia minus. Animi explicabo ad fugiat perspiciatis et accusamus recusandae obcaecati minima quia ipsum.</p>
+                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam .</p>
                     <a href="#">Contactanos</a>
                 </div>
             </section>
@@ -45,8 +44,7 @@
                 <div>
                     <h1>Los Mejores Productos a Base de Miel</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro ratione a rerum nam! Optio illo veritatis consequatur consectetur laborum, cumque nihil perspiciatis harum mollitia, dicta aut expedita quibusdam voluptatibus iste. Unde,
-                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam distinctio aliquid! Qui, enim repellendus. Corrupti expedita minima ipsam beatae distinctio vitae perspiciatis maiores.
-                        Ipsam aliquam blanditiis quaerat reiciendis cum explicabo dolor quos beatae hic voluptatum. Aliquid, iure alias? Dolorem, mollitia minus. Animi explicabo ad fugiat perspiciatis et accusamus recusandae obcaecati minima quia ipsum.</p>
+                        fuga distinctio nobis ratione nam numquam quaerat non</p>
                     <a href="#">Contactanos</a>
                 </div>
             </section>
@@ -54,8 +52,7 @@
                 <div>
                     <h1>Los Mejores Precios</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro ratione a rerum nam! Optio illo veritatis consequatur consectetur laborum, cumque nihil perspiciatis harum mollitia, dicta aut expedita quibusdam voluptatibus iste. Unde,
-                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam distinctio aliquid! Qui, enim repellendus. Corrupti expedita minima ipsam beatae distinctio vitae perspiciatis maiores.
-                        Ipsam aliquam blanditiis quaerat reiciendis cum explicabo dolor quos beatae hic voluptatum. Aliquid, iure alias? Dolorem, mollitia minus. Animi explicabo ad fugiat perspiciatis et accusamus recusandae obcaecati minima quia ipsum.</p>
+                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam di</p>
                     <a href="#">Contactanos</a>
                 </div>
             </section>
@@ -63,8 +60,7 @@
                 <div>
                     <h1>Calidad 100% Natural</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro ratione a rerum nam! Optio illo veritatis consequatur consectetur laborum, cumque nihil perspiciatis harum mollitia, dicta aut expedita quibusdam voluptatibus iste. Unde,
-                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam distinctio aliquid! Qui, enim repellendus. Corrupti expedita minima ipsam beatae distinctio vitae perspiciatis maiores.
-                        Ipsam aliquam blanditiis quaerat reiciendis cum explicabo dolor quos beatae hic voluptatum. Aliquid, iure alias? Dolorem, mollitia minus. Animi explicabo ad fugiat perspiciatis et accusamus recusandae obcaecati minima quia ipsum.</p>
+                        fuga distinctio nobis ratione nam numquam quaerat non suscipit! Veniam fugit tenetur commodi quis quisquam .</p>
                     <a href="#">Contactanos</a>
                 </div>
             </section>
