corregimos algunas partes de la pagina

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-    <header class="site-header">
+    <div class="contenedor-slider">
         <div class="cabecera contenedor">
-            <div class="logo">
-                <img src="img/logo.svg" alt="Logo">
-            </div>
             <div class="hamburguesa">
                 <a href="#" id="boton_menu">
                     <span></span>
@@ -29,8 +26,6 @@
                 <a href="#"><img id="logo-menu" src="img/logo.svg" alt=""></a>
             </nav>
         </div>
-    </header>
-    <div class="contenedor-slider">
         <div class="slider-contenedor">
             <section class="contenido-slider">
                 <div>
@@ -64,6 +59,72 @@
                     <a href="#">Contactanos</a>
                 </div>
             </section>
+        </div>
+    </div>
+    <div class="main articulos">
+        <div class="contenedor-articulos contenedor">
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p>Precio: <span>$300</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+
         </div>
     </div>
 
