añadimos mas estilos css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
@@ -77,6 +79,8 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
@@ -87,6 +91,8 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
@@ -97,6 +103,8 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
@@ -107,6 +115,8 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
@@ -117,7 +127,32 @@
                 <img src="img/ProductosN1.png" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
-                    <p>Precio: <span>$300</span></p>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
                         velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
                 </div>
