se agregaron ejemplos de productos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="main articulos">
         <div class="contenedor-articulos contenedor">
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P1.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -76,7 +76,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P2.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -88,7 +88,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P3.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -100,7 +100,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P4.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -112,7 +112,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P5.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -124,7 +124,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P6.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -136,7 +136,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P3.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -148,7 +148,7 @@
             </div>
             <!-- Finaliza el card del articulo -->
             <div class="card-articulo">
-                <img src="img/ProductosN1.png" alt="" class="articulo">
+                <img src="img/P5.jpg" alt="" class="articulo">
                 <div class="texto-articulo">
                     <h2>Hola</h2>
                     <p class="Precio">Precio: <span>$300</span></p>
@@ -159,7 +159,54 @@
                 <a href="#" class="boton">Adquierelo</a>
             </div>
             <!-- Finaliza el card del articulo -->
-
+            <div class="card-articulo">
+                <img src="img/P1.jpg" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/P6.jpg" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/P2.jpg" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
+            <div class="card-articulo">
+                <img src="img/P4.jpg" alt="" class="articulo">
+                <div class="texto-articulo">
+                    <h2>Hola</h2>
+                    <p class="Precio">Precio: <span>$300</span></p>
+                    <p class="categoria">Categoria: <span>Mieles</span></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore delectus veritatis aliquid commodi laboriosam a, in cum vitae, tempore eos, eaque at fuga officiis harum! Iusto atque iure corporis neque.Quis nostrum officiis facilis
+                        velit beatae deleniti nemo fugit error placeat, nobis corporis rerum consectetur cumque, dicta rem voluptatibus? Eos tempore sit mollitia quis ipsa illo reiciendis incidunt, id quidem.</p>
+                </div>
+                <a href="#" class="boton">Adquierelo</a>
+            </div>
+            <!-- Finaliza el card del articulo -->
         </div>
     </div>
 
