se agrego un texto

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         </div>
     </div>
     <div class="main articulos">
+        <div class="header-articulos">
+            <h1>Nuestros Productos</h1>
+        </div>
         <div class="contenedor-articulos contenedor">
             <div class="card-articulo">
                 <img src="img/P1.jpg" alt="" class="articulo">
